# ainglenix

./: .gitignore  README.md  config.nix  default.nix  example.config.nix  example.default.nix
.circleci/: config.yml
ci/: setup-hydra-cache.sh
docker/: Dockerfile.debian  Dockerfile.latest  Dockerfile.minimal  Dockerfile.ubuntu  build  push  server-run
docs/: config.toml  hero.cast
docs/content/: _index.md
docs/public/: 404.html  index.html  index.xml
docs/public/categories/: index.html  index.xml
docs/public/tags/: index.html  index.xml
examples/: custom-holochain.md
happs/add-zome/: default.nix
happs/create/: default.nix
happs/scaffold/: default.nix
nix-shell/: default.nix
openssl/: default.nix
pkgs/: holonix-introspect.nix  holonix.nix
rust/manifest/list-unpinned/examples/all-pinned/: Cargo.toml
rust/manifest/list-unpinned/examples/one-unpinned/: Cargo.toml
test/: default.nix  happs.bats  holochain-binaries.bats  nix-shell.bats
